--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-websocket": "^2.1.0",
     "redux": "^4.1.1",
     "redux-thunk": "^2.3.0",
     "wait-on": "^6.0.0",
